[package]
name = "tongki-dev"
version = "0.1.0"
edition = "2024"

[dependencies]
askama = "0.15.4"
axum = "0.8.8"
chrono = "0.4.44"
fake = "4.4.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.149"
tokio = {version = "1.49.0", features= ["full"]}
tower-http = {version = "0.6.8", features = ["fs", "trace"]}
